start to work on results and discussion

--- a/endnote.bib
+++ b/endnote.bib
@@ -2152,7 +2152,6 @@ Publisher: Nature Publishing Group},
 	issn = {2050-084X},
 	url = {https://doi.org/10.7554/eLife.73353},
 	doi = {10.7554/eLife.73353},
-	abstract = {Recent data suggest that interactions between systems involved in higher order knowledge and associative learning drive responses during value-based learning. However, it is unknown how these systems impact subjective responses, such as pain. We tested how instructions and reversal learning influence pain and pain-evoked brain activation. Healthy volunteers (n=40) were either instructed about contingencies between cues and aversive outcomes or learned through experience in a paradigm where contingencies reversed three times. We measured predictive cue effects on pain and heat-evoked brain responses using functional magnetic resonance imaging. Predictive cues dynamically modulated pain perception as contingencies changed, regardless of whether participants received contingency instructions. Heat-evoked responses in the insula, anterior cingulate, and other regions updated as contingencies changed, and responses in the prefrontal cortex mediated dynamic cue effects on pain, whereas responses in the brainstem’s rostroventral medulla (RVM) were shaped by initial contingencies throughout the task. Quantitative modeling revealed that expected value was shaped purely by instructions in the Instructed Group, whereas expected value updated dynamically in the Uninstructed Group as a function of error-based learning. These differences were accompanied by dissociations in the neural correlates of value-based learning in the rostral anterior cingulate, thalamus, and posterior insula, among other regions. These results show how predictions dynamically impact subjective pain. Moreover, imaging data delineate three types of networks involved in pain generation and value-based learning: those that respond to initial contingencies, those that update dynamically during feedback-driven learning as contingencies change, and those that are sensitive to instruction. Together, these findings provide multiple points of entry for therapies designs to impact pain.},
 	urldate = {2022-12-09},
 	journal = {eLife},
 	author = {Atlas, Lauren Y and Dildine, Troy C and Palacios-Barrios, Esther E and Yu, Qingbao and Reynolds, Richard C and Banker, Lauren A and Grant, Shara S and Pine, Daniel S},
@@ -2162,4 +2161,18 @@ Publisher: Nature Publishing Group},
 	note = {Publisher: eLife Sciences Publications, Ltd},
 	keywords = {fMRI, conditioning, pain, instructions, expectancy, reversal learning},
 	pages = {e73353},
+}
+
+
+@article{Almaatouq_BBS_2022,
+	title = {Beyond {Playing} 20 {Questions} with {Nature}: {Integrative} {Experiment} {Design} in the {Social} and {Behavioral} {Sciences}},
+	issn = {0140-525X},
+	url = {https://doi.org/10.1017/S0140525X22002874},
+	doi = {10.1017/S0140525X22002874},
+	author = {Almaatouq, Abdullah and Griffiths, Thomas L. and Suchow, Jordan W. and Whiting, Mark E. and Evans, James and Watts, Duncan J.},
+	year = {2022},
+	note = {Edition: 2022/12/21
+Publisher: Cambridge University Press},
+	keywords = {generalizability, experiments, (in)commensurability, cumulative knowledge},
+	pages = {1--55},
 }
