--- a/general_method.rmd
+++ b/general_method.rmd
@@ -21,7 +21,7 @@ exp_table <- read.csv('Exp_info_all.csv') %>%
 apa_table(
   exp_table
   , caption = "Information about all experiments."
-  , note = "DV = dependent variables; Valence = how valence was manipulated; Shape & Label = how shapes & labels were presented."
+  , note = "Stim of Morality = How moral character was manipulated; Presenting order = how shapes & labels were presented. The data from experiments 7a & 7b, which were reported in Hu et al (2020), are only included in the meta-analysis in supplementary materials."
   , escape = TRUE
 )
 ```
@@ -32,7 +32,9 @@ We used the `tidyverse` of r (see script `Load_save_data.r`) to preprocess the d
 
 We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or *t*-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore providing uncertainty in estimation [@Rouder_2005_BHM_SDT]. Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using the normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide a better fitting of the data. For example, Reaction times are not normally distributed but are right skewed, and the linear assumption in ANOVAs is not satisfied [@Rousselet_2019]. Third, BHM provides a unified framework to analyze data from different levels and different sources, avoiding information loss when we need to combine data from different experiments. 
 
-We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as the backend, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis [e.g., @Goh_2016_mini]. More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Results of individual experiments can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately. 
+We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as the back-end, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis [e.g., @Goh_2016_mini]. More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Results of individual experiments can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately. 
+
+For questionnaire data, we only reported the subjective distance between different persons or moral character in the supplementary results and did not analyze other questionnaire data, which are described in [@Liu_2020_JOPD].
 
 ### Response data
 We followed previous studies [@Hu_2020_GoodSelf; @Sui_2012_JEPHPP] and used the signal detection theory approach to analyze the response data. More specifically, the match trials are treated as signals and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
@@ -93,12 +95,10 @@ Note that for experiments 3a, 3b, and 6b, the three-level model for reaction tim
 
 ### Testing hypotheses
 #### Prioritization of moral character
-We tested whether moral characters are prioritized by examining the population-level effects from the three-level Bayesian hierarchical model of $d'$ and reaction times from experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distribution of the good/bad character and the neutral character and tested whether the 95% highest density intervals (HDIs) of the difference include zero. If the 95% highest density intervals do not include zero, we infer that there is a population-level difference between the conditions in the test, otherwise, we will infer that there is no evidence for such a difference. Note that for reaction times, we focused on the matched trials as in previous studies.
+We tested whether moral characters are prioritized by examining the population-level effects (also called fixed effect) of the three-level Bayesian hierarchical model of experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distribution of the good/bad character and the neutral character and tested whether the 95% highest density intervals (HDIs) of the difference include zero. If the 95% highest density intervals do not include zero, we infer that there is a population-level difference between the conditions in the test, otherwise, we will infer that there is no evidence for such a difference. Note that for reaction times, we focused on the matched trials as in previous studies.
 
 #### Modulation of self-referential processing
-We tested the interaction between valence and self-referential processing by examining the interaction between moral character and self-referential process, which included results from experiments 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: the valence effect or the interaction between self-referential processing and valence. If the valence effect model is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibit a similar pattern for both self- and other-referential conditions. On the other hand, if the interaction model is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibit different patterns for self- and other-referential conditions.
+We tested the modulation effect ofself-referential processing by examining the interaction between moral character and self-referential process for the three-level Bayesian hierarchical model of experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: pure valence effect or the valence effect is modulated by self-referential process. If the former is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referential conditions. On the other hand, if spontaneous self-referential processing account is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referential conditions.
 
 #### Spontaneous binding between the self and good character
-Based on data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous. The design of experiments 4a and 4b are complementary. For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there should also be an interaction between the two, e.g., there will be a self-other difference for some moral character conditions but not for other moral character conditions.
-
-We only reported the subjective distance between different persons in the supplementary results and did not analyze other questionnaire data described in [@Liu_2020_JOPD].
+For on data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous (i.e., whehter the good character is spontaneously bound with self). For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words either facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions.
